--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,8 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/loginFragment">
-
+    app:startDestination="@id/viewPagerFragment">
+    <fragment
+        android:id="@+id/viewPagerFragment"
+        android:name="com.alaeri.cats.app.ui.viewpager.ViewPagerFragment"
+        android:label="ViewPagerFragment" />
     <fragment
         android:id="@+id/catsFragment"
         android:name="com.alaeri.cats.app.ui.cats.CatsFragment"
