--- a/app/src/main/res/layout/command_item.xml
+++ b/app/src/main/res/layout/command_item.xml
@@ -1,49 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="20dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="150dp">
             <TextView
                 android:layout_width="0dp"
+                android:textColor="@color/white"
+                android:padding="8dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/receiverTextView"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 app:layout_constraintBottom_toTopOf="@id/operationIdTextView"
                 android:id="@+id/invokerTextView"/>
             <TextView
                 android:layout_width="0dp"
+                android:textColor="@color/white"
+                android:gravity="right"
+                android:padding="8dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/invokerTextView"
-                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@id/operationIdTextView"
+                android:layout_height="0dp"
                 android:id="@+id/receiverTextView"/>
             <TextView
                 app:layout_constraintTop_toBottomOf="@id/invokerTextView"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/operationStateTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:padding="8dp"
+                app:layout_constraintEnd_toStartOf="@id/operationStateTextView"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:gravity="bottom"
+                android:textColor="@color/white"
                 android:id="@+id/operationIdTextView"/>
             <TextView
-                app:layout_constraintTop_toBottomOf="@id/operationIdTextView"
+                app:layout_constraintTop_toBottomOf="@id/invokerTextView"
+                app:layout_constraintStart_toEndOf="@id/operationIdTextView"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:padding="8dp"
+                android:textColor="@color/white"
+                android:gravity="bottom|end"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:id="@+id/operationStateTextView"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
