--- a/app/src/main/res/layout/command_item.xml
+++ b/app/src/main/res/layout/command_item.xml
@@ -9,6 +9,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/cardView"
         android:layout_margin="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -20,7 +21,7 @@
                 android:textColor="@color/white"
                 android:padding="8dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@id/parentOperationIdTextView"
                 app:layout_constraintEnd_toStartOf="@id/receiverTextView"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toTopOf="@id/operationIdTextView"
@@ -37,8 +38,19 @@
                 android:layout_height="0dp"
                 android:id="@+id/receiverTextView"/>
             <TextView
-                app:layout_constraintTop_toBottomOf="@id/invokerTextView"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:padding="8dp"
+                app:layout_constraintEnd_toStartOf="@id/invokerTextView"
+                android:layout_width="50dp"
+                android:layout_height="0dp"
+                android:gravity="bottom"
+                android:textColor="@color/white"
+                android:id="@+id/parentOperationIdTextView"/>
+            <TextView
+                app:layout_constraintTop_toBottomOf="@id/invokerTextView"
+                app:layout_constraintStart_toStartOf="@id/invokerTextView"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:padding="8dp"
                 app:layout_constraintEnd_toStartOf="@id/operationStateTextView"
