--- a/app/src/main/res/layout/viewpager_fragment.xml
+++ b/app/src/main/res/layout/viewpager_fragment.xml
@@ -19,7 +19,7 @@
         android:layout_height="0dp"
         android:id="@+id/pager"
         android:orientation="horizontal" />
-    <include layout="@layout/command_focus"
+    <include layout="@layout/log_focus"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         app:layout_constraintTop_toBottomOf="@id/pager"
