--- a/log-android-ui/src/main/res/layout/log_item.xml
+++ b/log-android-ui/src/main/res/layout/log_item.xml
@@ -21,6 +21,16 @@
                 android:textColor="@color/white"
                 android:padding="8dp"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/invokerTextView"
+                android:layout_height="20dp"
+                android:id="@+id/threadTextView"/>
+            <TextView
+                android:layout_width="0dp"
+                android:textColor="@color/white"
+                android:padding="8dp"
+                app:layout_constraintTop_toBottomOf="@id/threadTextView"
                 app:layout_constraintStart_toEndOf="@id/parentOperationIdTextView"
                 app:layout_constraintEnd_toStartOf="@id/receiverTextView"
                 android:layout_height="0dp"
@@ -31,14 +41,14 @@
                 android:textColor="@color/white"
                 android:gravity="right"
                 android:padding="8dp"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/threadTextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/invokerTextView"
                 app:layout_constraintBottom_toTopOf="@id/operationIdTextView"
                 android:layout_height="0dp"
                 android:id="@+id/receiverTextView"/>
             <TextView
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/threadTextView"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:padding="8dp"
